--- a/package.json
+++ b/package.json
@@ -21,82 +21,79 @@
   },
   "homepage": "https://github.com/openstax/react-components",
   "dependencies": {
-    "bootstrap": "3.3.5",
-    "camelcase": "1.2.1",
-    "classnames": "2.1.5",
-    "eventemitter2": "0.4.14",
-    "font-awesome": "4.4.0",
+    "bootstrap": "3.3.6",
+    "camelcase": "2.1.0",
+    "classnames": "2.2.3",
+    "eventemitter2": "1.0.0",
+    "font-awesome": "4.5.0",
     "keymaster": "1.6.2",
-    "markdown-it": "4.4.0",
-    "moment": "2.10.6",
+    "markdown-it": "6.0.0",
+    "moment": "2.11.2",
     "underscore": "1.8.3"
   },
   "devDependencies": {
-    "blanket": "1.1.7",
-    "chai": "2.1.2",
-    "chai-as-promised": "5.1.0",
-    "chromedriver": "2.19.0",
-    "cjsxify": "0.2.6",
+    "blanket": "1.2.2",
+    "chai": "3.5.0",
+    "chai-as-promised": "5.2.0",
+    "chromedriver": "2.21.2",
+    "cjsxify": "0.3.0",
     "coffee-jsx-loader": "0.1.3",
     "coffee-loader": "0.7.2",
     "coffee-react-transform": "3.3.0",
-    "coffee-script": "1.9.3",
-    "coffeelint": "1.13.0",
+    "coffee-script": "1.10.0",
+    "coffeelint": "1.14.2",
     "coffeelint-loader": "0.1.1",
-    "css-loader": "0.22.0",
-    "del": "1.1.1",
-    "es6-promise": "2.3.0",
-    "extract-text-webpack-plugin": "0.8.2",
-    "file-exists": "0.1.1",
-    "file-loader": "0.8.4",
-    "fixed-data-table": "0.4.1",
-    "gulp": "3.9.0",
-    "gulp-coffeelint": "0.4.0",
-    "gulp-env": "0.2.0",
-    "gulp-gzip": "1.0.0",
-    "gulp-rev": "3.0.1",
-    "gulp-tar": "1.4.0",
-    "gulp-util": "3.0.6",
+    "css-loader": "0.23.1",
+    "del": "2.2.0",
+    "es6-promise": "3.1.2",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-exists": "1.0.0",
+    "file-loader": "0.8.5",
+    "fixed-data-table": "0.6.0",
+    "gulp": "3.9.1",
+    "gulp-coffeelint": "0.6.0",
+    "gulp-env": "0.4.0",
+    "gulp-gzip": "1.2.0",
+    "gulp-rev": "7.0.0",
+    "gulp-tar": "1.8.0",
+    "gulp-util": "3.0.7",
     "gulp-watch": "4.3.5",
-    "istanbul-instrumenter-loader": "0.1.3",
-    "json-loader": "0.5.3",
-    "karma": "0.13.19",
+    "istanbul-instrumenter-loader": "0.2.0",
+    "json-loader": "0.5.4",
+    "karma": "0.13.21",
     "karma-chai": "0.1.0",
     "karma-chai-sinon": "0.1.5",
-    "karma-chrome-launcher": "0.2.1",
-    "karma-coverage": "0.5.2",
-    "karma-mocha": "0.1.10",
-    "karma-mocha-reporter": "1.0.4",
-    "karma-nyan-reporter": "0.2.2",
-    "karma-phantomjs-launcher": "0.2.1",
-    "karma-phantomjs-shim": "1.1.1",
-    "karma-sourcemap-loader": "0.3.6",
+    "karma-chrome-launcher": "0.2.2",
+    "karma-coverage": "0.5.3",
+    "karma-mocha": "0.2.2",
+    "karma-mocha-reporter": "1.2.2",
+    "karma-nyan-reporter": "0.2.3",
+    "karma-phantomjs-launcher": "1.0.0",
+    "karma-phantomjs-shim": "1.2.0",
+    "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.7.0",
-    "less": "2.5.3",
-    "less-loader": "2.2.1",
-    "lodash": "3.10.1",
-    "mocha": "2.2.5",
-    "phantomjs": "1.9.18",
-    "react": "0.13.1",
-    "react-bootstrap": "0.23.0",
+    "less": "2.6.0",
+    "less-loader": "2.2.2",
+    "lodash": "4.5.1",
+    "mocha": "2.4.5",
+    "phantomjs": "2.1.3",
+    "react": "0.14.7",
+    "react-addons-test-utils": "^0.14.7",
+    "react-bootstrap": "0.28.3",
     "react-hot-loader": "1.3.0",
     "react-scroll-components": "0.2.2",
-    "selenium-webdriver": "2.47.0",
-    "sinon": "1.17.1",
+    "selenium-webdriver": "2.52.0",
+    "sinon": "1.17.3",
     "sinon-chai": "2.8.0",
-    "style-loader": "0.12.4",
-    "url-loader": "0.5.6",
-    "webpack": "1.12.2",
-    "webpack-dev-server": "1.12.0",
-    "webpack-module-hot-accept": "1.0.3",
+    "style-loader": "0.13.0",
+    "url-loader": "0.5.7",
+    "webpack": "1.12.14",
+    "webpack-dev-server": "1.14.1",
+    "webpack-module-hot-accept": "1.0.4",
     "webpack-umd-external": "1.0.2",
-    "when": "3.7.3"
+    "when": "3.7.7"
   },
-  "peerDependencies": {
-    "react": "^0.13.1",
-    "react-bootstrap": "^0.23.0",
-    "react-scroll-components": "^0.2.2"
-  },
+  "peerDependencies": {},
   "config": {
     "blanket": {
       "pattern": "src"
