--- a/package.json
+++ b/package.json
@@ -91,7 +91,12 @@
     "webpack-dev-server": "1.14.1",
     "webpack-module-hot-accept": "1.0.4",
     "webpack-umd-external": "1.0.2",
-    "when": "3.7.7"
+    "when": "3.7.3"
+  },
+  "peerDependencies": {
+    "react": "^0.13.1",
+    "react-bootstrap": ">=0.23.0",
+    "react-scroll-components": "^0.2.2"
   },
   "peerDependencies": {},
   "config": {
