--- a/package.json
+++ b/package.json
@@ -94,8 +94,8 @@
     "when": "3.7.3"
   },
   "peerDependencies": {
-    "react": "^0.13.1",
-    "react-bootstrap": ">=0.23.0",
+    "react": "0.14.7",
+    "react-bootstrap": "0.28.3",
     "react-scroll-components": "^0.2.2"
   },
   "peerDependencies": {},
