--- a/package.json
+++ b/package.json
@@ -74,12 +74,12 @@
     "karma-webpack": "1.7.0",
     "mocha": "2.2.5",
     "phantomjs": "1.9.18",
-    "react-bootstrap": ">=0.23.0 <=0.26.2",
+    "react-bootstrap": "0.28.3",
     "less": "2.6.0",
     "less-loader": "2.2.2",
     "lodash": "4.5.1",
     "react": "0.14.7",
-    "react-addons-test-utils": "^0.14.7",
+    "react-addons-test-utils": "0.14.7",
     "react-hot-loader": "1.3.0",
     "react-scroll-components": "0.2.2",
     "selenium-webdriver": "2.52.0",
@@ -95,7 +95,7 @@
   },
   "peerDependencies": {
     "react": "0.14.7",
-    "react-bootstrap": ">=0.23.0 <=0.26.2",
+    "react-bootstrap": "0.28.3",
     "react-scroll-components": "^0.2.2"
   },
   "peerDependencies": {},
