--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/openstax/react-components",
   "dependencies": {
-    "bootstrap": "3.3.5",
+    "bootstrap": "3.3.6",
     "camelcase": "1.2.1",
     "classnames": "2.1.5",
     "eventemitter2": "0.4.14",
@@ -49,7 +49,7 @@
     "extract-text-webpack-plugin": "0.8.2",
     "file-exists": "0.1.1",
     "file-loader": "0.8.4",
-    "fixed-data-table": "0.4.1",
+    "fixed-data-table": "0.6.0",
     "gulp": "3.9.0",
     "gulp-coffeelint": "0.4.0",
     "gulp-env": "0.2.0",
@@ -77,8 +77,10 @@
     "lodash": "3.10.1",
     "mocha": "2.2.5",
     "phantomjs": "1.9.18",
-    "react": "0.13.1",
-    "react-bootstrap": ">=0.23.0 <=0.26.2",
+    "react": "0.14.8",
+    "react-dom": "0.14.8",
+    "react-addons-test-utils": "0.14.8",
+    "react-bootstrap": "0.28.2",
     "react-hot-loader": "1.3.0",
     "react-scroll-components": "0.2.2",
     "selenium-webdriver": "2.47.0",
@@ -91,11 +93,6 @@
     "webpack-module-hot-accept": "1.0.3",
     "webpack-umd-external": "1.0.2",
     "when": "3.7.3"
-  },
-  "peerDependencies": {
-    "react": "^0.13.1",
-    "react-bootstrap": ">=0.23.0 <=0.26.2",
-    "react-scroll-components": "^0.2.2"
   },
   "config": {
     "blanket": {
